force-app/main/default/objects/Prior_Authorization_Duplicate__c/Prior_Authorization_Duplicate__c.object-meta.xml
<CustomObject>
    <label>Prior Authorization Duplicate</label>
    <nameField>
        <displayFormat>PAD-{00000}</displayFormat>
        <label>Prior Authorization Duplicate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prior Authorization Duplicates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>