force-app/main/default/objects/Prior_Authorization_Duplicate__c/fields/Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case ID</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Prior Authorization Duplicates</relationshipLabel>
    <relationshipName>Prior_Authorization_Duplicates</relationshipName>
    <type>Lookup</type>
</CustomField>