force-app/main/default/objects/Prior_Authorization_Duplicate__c/fields/Confirmed_By__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Confirmed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Confirmed_Prior_Authorization_Duplicates</relationshipName>
    <type>Lookup</type>
</CustomField>