force-app/main/default/objects/Prior_Authorization_Duplicate__c/fields/Duplicate_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate Confirmed</label>
    <type>Checkbox</type>
</CustomField>