force-app/main/default/objects/Prior_Authorization_Duplicate__c/fields/Duplicate_Detected_Date__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Detected_Date__c</fullName>
    <label>Duplicate Detected Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>