force-app/main/default/objects/Prior_Authorization_Duplicate__c/fields/Parent_Prior_Authorization_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_Prior_Authorization_ID__c</fullName>
    <label>Parent Prior Authorization ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>