force-app/main/default/objects/Prior_Authorization_Duplicate__c/fields/Prior_Authorization_ID__c.field-meta.xml
<CustomField>
    <fullName>Prior_Authorization_ID__c</fullName>
    <externalId>true</externalId>
    <label>Prior Authorization ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>