force-app/main/default/objects/Prior_Authorization_Duplicate__c/listViews/All_Prior_Authorization_Duplicates.listView-meta.xml
<ListView>
    <fullName>All_Prior_Authorization_Duplicates</fullName>
    <columns>NAME</columns>
    <columns>Prior_Authorization_ID__c</columns>
    <columns>Parent_Prior_Authorization_ID__c</columns>
    <columns>Case_ID__c</columns>
    <columns>Duplicate_Detected_Date__c</columns>
    <columns>Duplicate_Confirmed__c</columns>
    <columns>Confirmed_By__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Prior Authorization Duplicates</label>
</ListView>