force-app/main/default/objects/Prior_Authorization_Duplicate__c/listViews/Confirmed_Duplicates.listView-meta.xml
<ListView>
    <fullName>Confirmed_Duplicates</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>NAME</columns>
    <columns>Prior_Authorization_ID__c</columns>
    <columns>Parent_Prior_Authorization_ID__c</columns>
    <columns>Case_ID__c</columns>
    <columns>Duplicate_Detected_Date__c</columns>
    <columns>Confirmed_By__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Duplicate_Confirmed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Confirmed Duplicates</label>
</ListView>